add banner in "user setting" operation

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -76,8 +76,16 @@
     "created": "Created",
     "view": "View Details",
     "userCount": "{count} User(s)",
-    "serviceCompletion": "Service completion",
-    "dashboard": "Dash Board",
+    "serviceCompletion": "Service Completion",
+    "dashboard": "DashBoard",
+    "status": "Status",
+    "statusOnGoing": "On-going",
+    "statusCompleted": "Completed",
+    "ongoingService": "On-going Service",
+    "confirmSetOnGoing": "Mark service as On-going for {email}?",
+    "serviceSetOnGoing": "Service set to On-going",
+    "serviceSetOnGoingFailed": "Failed to set service to On-going",
+    "userSetting": "User Setting",
     "confirmServiceComplete": "Mark service as complete for {email}?",
     "serviceCompleted": "Service marked complete",
     "serviceCompleteFailed": "Failed to mark service complete"
