--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -78,6 +78,14 @@
     "userCount": "{count} 位使用者",
     "serviceCompletion": "服務完成",
     "dashboard": "儀表板",
+    "status": "狀態",
+    "statusOnGoing": "進行中",
+    "statusCompleted": "已完成",
+    "ongoingService": "設為進行中",
+    "confirmSetOnGoing": "要將 {email} 的服務標記為進行中嗎？",
+    "serviceSetOnGoing": "服務已標記為進行中",
+    "serviceSetOnGoingFailed": "將服務標記為進行中失敗",
+    "userSetting": "使用者設定",
     "confirmServiceComplete": "要將 {email} 的服務標記為完成嗎？",
     "serviceCompleted": "服務已標記為完成",
     "serviceCompleteFailed": "標記服務完成失敗"
