--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -141,6 +141,7 @@
       "name": "平均壓力指數",
       "loading": "載入壓力資料中...",
       "noData": "暫無壓力資料",
+      "addData": "新增壓力資料",
       "average": "平均",
       "stressScore": "壓力指數",
       "stressScoreWithUnit": "壓力指數 (分數)",
