--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -52,7 +52,8 @@
     "manualSupport": "人工支援",
     "bookingSystem": "預約系統",
     "admin": "管理面板",
-    "userManagement": "使用者管理"
+    "userManagement": "使用者管理",
+    "provider": "醫護提供者"
   },
   "admin": {
     "description": "基本管理面板。使用下列連結來管理系統。",
