--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -49,7 +49,7 @@
     "formatSettings": "Format Settings",
     "userSettings": "User Settings",
     "aiSupport": "AI Support",
-    "manualSupport": "Manual Support",
+    "chat": "Chat",
     "bookingSystem": "Booking System",
     "admin": "Admin Panel",
     "userManagement": "User Management",
@@ -406,9 +406,14 @@
     "renameFailed": "Failed to rename conversation"
 
   },
-  "manualSupport": {
-    "title": "Manual Support",
-    "contactUs": "Contact Us",
-    "faq": "Frequently Asked Questions"
+  "chat": {
+    "title": "Chat",
+    "healthcareProvider": "Healthcare Provider",
+    "offline": "Offline",
+    "noMessages": "No messages yet",
+    "startConversation": "Start a conversation with your healthcare provider",
+    "typePlaceholder": "Type a message...",
+    "sendHint": "Press Enter to send, Shift+Enter for new line",
+    "autoResponse": "Thank you for your message. Your healthcare provider will respond soon."
   }
 }
