Build UI for booking system

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -448,5 +448,36 @@
     "removeFile": "Remove",
     "sendHint": "Press Enter to send, Shift+Enter for new line",
     "autoResponse": "Thank you for your message. Your healthcare provider will respond soon."
+  },
+  "booking": {
+    "title": "Booking System",
+    "bookService": "Book a Service",
+    "service": "Service",
+    "selectService": "Select a service",
+    "generalCheckup": "General Checkup",
+    "dental": "Dental Care",
+    "cardiology": "Cardiology",
+    "therapy": "Physical Therapy",
+    "date": "Date",
+    "time": "Time",
+    "provider": "Healthcare Provider",
+    "selectProvider": "Select a provider",
+    "notes": "Additional Notes",
+    "submit": "Book Appointment",
+    "upcoming": "Upcoming Appointments",
+    "noUpcoming": "No upcoming appointments.",
+    "status": "Status",
+    "pending": "Pending",
+    "confirmed": "Confirmed",
+    "cancelled": "Cancelled",
+    "success": "Booking submitted successfully!",
+    "adminTitle": "Booking Management",
+    "adminDesc": "Manage patient appointments",
+    "patient": "Patient",
+    "action": "Action",
+    "approve": "Approve",
+    "reject": "Reject",
+    "approvedSuccess": "Booking approved",
+    "rejectedSuccess": "Booking rejected"
   }
 }
