--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -463,5 +463,36 @@
     "removeFile": "移除",
     "sendHint": "按 Enter 發送，Shift+Enter 換行",
     "autoResponse": "感謝您的訊息。您的醫護人員將儘快回覆。"
+  },
+  "booking": {
+    "title": "預約系統",
+    "bookService": "預約服務",
+    "service": "服務項目",
+    "selectService": "選擇服務",
+    "generalCheckup": "一般檢查",
+    "dental": "牙科護理",
+    "cardiology": "心臟科",
+    "therapy": "物理治療",
+    "date": "日期",
+    "time": "時間",
+    "provider": "醫護人員",
+    "selectProvider": "選擇醫護人員",
+    "notes": "備註",
+    "submit": "提交預約",
+    "upcoming": "即將到來的預約",
+    "noUpcoming": "沒有即將到來的預約。",
+    "status": "狀態",
+    "pending": "待確認",
+    "confirmed": "已確認",
+    "cancelled": "已取消",
+    "success": "預約提交成功！",
+    "adminTitle": "預約管理",
+    "adminDesc": "管理病患預約",
+    "patient": "病患",
+    "action": "操作",
+    "approve": "批准",
+    "reject": "拒絕",
+    "approvedSuccess": "預約已批准",
+    "rejectedSuccess": "預約已拒絕"
   }
 }
