--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -515,6 +515,19 @@
     "rejectReasonPrompt": "請填寫拒絕原因：",
     "needHelp": "需要幫助？聯絡您的醫護人員或客服支援",
     "ChatwithProvider": "與醫護人員聊天",
-    "allServices": "所有服務"
+    "allServices": "所有服務",
+    "manageTimeSlots": "管理可用時段",
+    "days": {
+      "monday": "星期一",
+      "tuesday": "星期二",
+      "wednesday": "星期三",
+      "thursday": "星期四",
+      "friday": "星期五",
+      "saturday": "星期六",
+      "sunday": "星期日"
+    },
+    "providerAvailability": "醫護人員可用時段",
+    "noTimeSlots": "此醫護人員目前沒有可用時段。",
+    "selectTimeSlot": "選擇一個時段"
   }
 }
