Improve time slot design

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -87,6 +87,8 @@
     "created": "Created",
     "view": "View Details",
     "userCount": "{count} User(s)",
+    "patientStatusSummary": "Patient Overview",
+    "patientsLabel": "Patients",
     "serviceCompletion": "Service Completion",
     "dashboard": "DashBoard",
     "status": "Status",
@@ -483,6 +485,9 @@
     "success": "Booking submitted successfully!",
     "adminTitle": "Booking Management",
     "adminDesc": "Manage patient appointments",
+    "statsToday": "Today",
+    "statsThisMonth": "This Month",
+    "statsTotal": "total",
     "patient": "Patient",
     "action": "Action",
     "approve": "Approve",
@@ -518,9 +523,14 @@
     "noProviderSlots": "No availability set by this provider yet.",
     "availableDates": "Available dates are highlighted",
     "maxTwoSlots": "Select 1 or 2 time slots",
-    "slotBooked": "Booked",
+    "slotBooked": "Has Booked",
     "hasSlots": "Has slots",
     "selectedDate": "Selected",
+    "clickToUnbook": "Click to unbook",
+    "clickToRemove": "Click to remove",
+    "clickToAdd": "Click to add",
+    "available": "Available",
+    "inactive": "Inactive",
     "selectedSlots": "{n} slot(s) selected",
     "bookingStepService": "Service",
     "bookingStepDateTime": "Date & Time",
