--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -86,6 +86,8 @@
     "created": "建立時間",
     "view": "查看詳情",
     "userCount": "{count} 位使用者",
+    "patientStatusSummary": "病患總覽",
+    "patientsLabel": "病患",
     "serviceCompletion": "服務完成",
     "dashboard": "儀表板",
     "status": "狀態",
@@ -490,6 +492,9 @@
     "success": "預約提交成功！",
     "adminTitle": "預約管理",
     "adminDesc": "管理病患預約",
+    "statsToday": "今日",
+    "statsThisMonth": "本月",
+    "statsTotal": "總計",
     "patient": "病患",
     "action": "操作",
     "approve": "批准",
@@ -525,9 +530,14 @@
     "noProviderSlots": "此醫護人員尚未設定可用時段。",
     "availableDates": "可預約日期已展示",
     "maxTwoSlots": "請選擇1至2個時段",
-    "slotBooked": "已預約",
+    "slotBooked": "有預約",
     "hasSlots": "已設定時段",
     "selectedDate": "已選擇",
+    "clickToUnbook": "點擊以取消預約",
+    "clickToRemove": "點擊以移除",
+    "clickToAdd": "點擊以新增",
+    "available": "可預約",
+    "inactive": "未啟用",
     "selectedSlots": "已選 {n} 個時段",
     "bookingStepService": "服務",
     "bookingStepDateTime": "日期與時間",
