Add admin visulization

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -67,6 +67,12 @@
   },
   "admin": {
     "description": "Basic administrative panel. Use the links below to manage the system.",
+    "overviewTitle": "Admin Overview",
+    "overviewDesc": "Track patient and booking metrics in real time.",
+    "totalPatients": "Total Patients",
+    "totalBookings": "Total Bookings",
+    "patientStatusChart": "Patient Status Distribution",
+    "bookingStatusChart": "Booking Status Distribution",
     "manageUsersCard": "Manage user accounts, roles and status",
     "userManagementTitle": "User Management",
     "id": "ID",
@@ -88,7 +94,6 @@
     "view": "View Details",
     "userCount": "{count} User(s)",
     "patientStatusSummary": "Patient Overview",
-    "patientsLabel": "Patients",
     "serviceCompletion": "Service Completion",
     "dashboard": "DashBoard",
     "status": "Status",
