--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -66,6 +66,12 @@
   },
   "admin": {
     "description": "基本管理面板。使用下列連結來管理系統。",
+    "overviewTitle": "管理總覽",
+    "overviewDesc": "即時追蹤病患與預約指標。",
+    "totalPatients": "病患總數",
+    "totalBookings": "預約總數",
+    "patientStatusChart": "病患狀態分佈",
+    "bookingStatusChart": "預約狀態分佈",
     "manageUsersCard": "管理使用者帳號、角色和狀態",
     "userManagementTitle": "使用者管理",
     "id": "id",
@@ -87,7 +93,6 @@
     "view": "查看詳情",
     "userCount": "{count} 位使用者",
     "patientStatusSummary": "病患總覽",
-    "patientsLabel": "病患",
     "serviceCompletion": "服務完成",
     "dashboard": "儀表板",
     "status": "狀態",
