--- a/src/locales/zh.json
+++ b/src/locales/zh.json
@@ -370,11 +370,13 @@
     "deleteAccountDesc": "帳戶刪除後，其所有資源和資料將被永久刪除。",
     "deleteAccountButton": "刪除帳戶",
     "deleting": "刪除中...",
-    "adminCannotDeleteSelf": "管理員無法刪除自己的帳戶。請聯絡其他管理員或系統擁有者。",
+    "adminCannotDeleteSelf": "管理員無法刪除自己的帳戶。請聯絡系統擁有者。",
     "profileIcon": "個人頭像",
     "profileIconDesc": "上傳並裁剪您的個人頭像",
     "removeIcon": "移除頭像",
-    "cropImage": "裁剪圖片"
+    "cropImage": "裁剪圖片",
+    "address": "地址",
+    "addressPlaceholder": "請輸入您的地址"
   },
   "aiSupport": {
     "title": "AI 支援聊天",
